--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,6 @@
   <link rel="stylesheet" href="assets/vendor/semantic.min.css">
 </head>
 <body>
-  <app-root></app-root>
+  <inventory-app-root></inventory-app-root>
 </body>
 </html>
