Implement product-list.component

--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,22 @@
   <link rel="stylesheet" href="assets/vendor/semantic.min.css">
 </head>
 <body>
-  <inventory-app-root></inventory-app-root>
+	<div class="ui menu">
+		<div class="ui container">
+			<a href="#" class="header item">
+				<img class="logo" src="assets/images/ng-book-2-minibook.png">
+				ng-book 2
+			</a>
+			<div class="header item borderless">
+				<h1 class="ui header">
+					Angular 2 Inventory App
+				</h1>
+			</div>
+		</div>
+	</div>
+
+	<div class="ui main text container">
+		<inventory-app-root></inventory-app-root>
+	</div>
 </body>
 </html>
